--- a/aspnetcore/migration/30-to-31.md
+++ b/aspnetcore/migration/30-to-31.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,0-Projekt zu ASP.net Core 3,1 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 02/12/2020
+ms.date: 07/02/2020
 no-loc:
 - Blazor
 - Blazor Server
@@ -14,12 +14,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/30-to-31
-ms.openlocfilehash: fa82138af46d11e47c22314feccc43043b636066
-ms.sourcegitcommit: d65a027e78bf0b83727f975235a18863e685d902
+ms.openlocfilehash: bf46b7deb45115a4f45b34be4e16e72308b34ac2
+ms.sourcegitcommit: 66fca14611eba141d455fe0bd2c37803062e439c
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 06/26/2020
-ms.locfileid: "85399919"
+ms.lasthandoff: 07/03/2020
+ms.locfileid: "85944606"
 ---
 # <a name="migrate-from-aspnet-core-30-to-31"></a>Migrieren von ASP.net Core 3,0 zu 3,1
 
@@ -45,7 +45,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,0-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK. Zum Beispiel:
+Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK. Beispiel:
 
 ```diff
 {
@@ -73,7 +73,7 @@ Aktualisieren Sie in der Projektdatei den [zielframeworkmoniker (TFM)](/dotnet/s
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher. Zum Beispiel:
+Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher. Beispiel:
 
 ```diff
 <ItemGroup>
@@ -86,7 +86,7 @@ Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jed
 
 ## <a name="update-docker-images"></a>Aktualisieren von Docker-Images
 
-Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält. Zum Beispiel:
+Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält. Beispiel:
 
 ```console
 docker pull mcr.microsoft.com/dotnet/core/aspnet:3.1
@@ -117,4 +117,4 @@ In ASP.net Core 3,1 wird ein `Component` taghilfsprogramm eingeführt. Das taghi
 + <component type="typeof(Counter)" render-mode="ServerPrerendered" param-IncrementAmount="10" />
 ```
 
-Weitere Informationen finden Sie unter [Integrieren von Komponenten in Razor-Seiten und MVC-Apps](/aspnet/core/blazor/components/integrate-components-into-razor-pages-and-mvc-apps?view=aspnetcore-3.1).
+Weitere Informationen finden Sie unter <xref:blazor/components/integrate-components-into-razor-pages-and-mvc-apps>.
