--- a/aspnetcore/security/samesite/rp31.md
+++ b/aspnetcore/security/samesite/rp31.md
@@ -15,16 +15,18 @@ no-loc:
 - Razor
 - SignalR
 uid: security/samesite/rp31
-ms.openlocfilehash: b191cbb9d209b27706f7125e019dc65ad725adb1
-ms.sourcegitcommit: d65a027e78bf0b83727f975235a18863e685d902
+ms.openlocfilehash: fdc541b400ddee2593b756d4ddb97b7bc2624ea0
+ms.sourcegitcommit: 66fca14611eba141d455fe0bd2c37803062e439c
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 06/26/2020
-ms.locfileid: "85400179"
+ms.lasthandoff: 07/03/2020
+ms.locfileid: "85944717"
 ---
 # <a name="aspnet-core-31-razor-pages-samesite-cookie-sample"></a>Beispiel für "ASP.net Core 3,1 Razor pages SameSite Cookie"
 
 ASP.net Core 3,0 verfügt über integrierte Unterstützung für das [SameSite](https://www.owasp.org/index.php/SameSite) -Attribut, einschließlich `SameSiteMode` des-Attribut Werts, `Unspecified` um das Schreiben des Attributs zu unterdrücken.
+
+[!INCLUDE[](~/includes/SameSiteIdentity.md)]
 
 ## <a name="writing-the-samesite-attribute"></a><a name="sampleCode"></a>Schreiben des SameSite-Attributs
 
