commit bilingual contents

--- a/aspnetcore/security/samesite/rp31.md
+++ b/aspnetcore/security/samesite/rp31.md
@@ -15,20 +15,22 @@ no-loc:
 - Razor
 - SignalR
 uid: security/samesite/rp31
-ms.openlocfilehash: b191cbb9d209b27706f7125e019dc65ad725adb1
-ms.sourcegitcommit: d65a027e78bf0b83727f975235a18863e685d902
+ms.openlocfilehash: fdc541b400ddee2593b756d4ddb97b7bc2624ea0
+ms.sourcegitcommit: 66fca14611eba141d455fe0bd2c37803062e439c
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 06/26/2020
-ms.locfileid: "85400179"
+ms.lasthandoff: 07/03/2020
+ms.locfileid: "85944717"
 ---
-# <a name="aspnet-core-31-razor-pages-samesite-cookie-sample"></a><span data-ttu-id="7b0fe-103">Beispiel für "ASP.net Core 3,1 Razor pages SameSite Cookie"</span><span class="sxs-lookup"><span data-stu-id="7b0fe-103">ASP.NET Core 3.1 Razor Pages SameSite cookie sample</span></span>
+# <a name="aspnet-core-31-razor-pages-samesite-cookie-sample"></a><span data-ttu-id="6fefa-103">Beispiel für "ASP.net Core 3,1 Razor pages SameSite Cookie"</span><span class="sxs-lookup"><span data-stu-id="6fefa-103">ASP.NET Core 3.1 Razor Pages SameSite cookie sample</span></span>
 
-<span data-ttu-id="7b0fe-104">ASP.net Core 3,0 verfügt über integrierte Unterstützung für das [SameSite](https://www.owasp.org/index.php/SameSite) -Attribut, einschließlich `SameSiteMode` des-Attribut Werts, `Unspecified` um das Schreiben des Attributs zu unterdrücken.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-104">ASP.NET Core 3.0 has built-in support for the [SameSite](https://www.owasp.org/index.php/SameSite) attribute, including a `SameSiteMode` attribute value of `Unspecified` to suppress writing the attribute.</span></span>
+<span data-ttu-id="6fefa-104">ASP.net Core 3,0 verfügt über integrierte Unterstützung für das [SameSite](https://www.owasp.org/index.php/SameSite) -Attribut, einschließlich `SameSiteMode` des-Attribut Werts, `Unspecified` um das Schreiben des Attributs zu unterdrücken.</span><span class="sxs-lookup"><span data-stu-id="6fefa-104">ASP.NET Core 3.0 has built-in support for the [SameSite](https://www.owasp.org/index.php/SameSite) attribute, including a `SameSiteMode` attribute value of `Unspecified` to suppress writing the attribute.</span></span>
 
-## <a name="writing-the-samesite-attribute"></a><a name="sampleCode"></a><span data-ttu-id="7b0fe-105">Schreiben des SameSite-Attributs</span><span class="sxs-lookup"><span data-stu-id="7b0fe-105">Writing the SameSite attribute</span></span>
+[!INCLUDE[](~/includes/SameSiteIdentity.md)]
 
-<span data-ttu-id="7b0fe-106">Im folgenden finden Sie ein Beispiel für das Schreiben eines SameSite-Attributs für ein Cookie.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-106">Following is an example of how to write a SameSite attribute on a cookie;</span></span>
+## <a name="writing-the-samesite-attribute"></a><a name="sampleCode"></a><span data-ttu-id="6fefa-105">Schreiben des SameSite-Attributs</span><span class="sxs-lookup"><span data-stu-id="6fefa-105">Writing the SameSite attribute</span></span>
+
+<span data-ttu-id="6fefa-106">Im folgenden finden Sie ein Beispiel für das Schreiben eines SameSite-Attributs für ein Cookie.</span><span class="sxs-lookup"><span data-stu-id="6fefa-106">Following is an example of how to write a SameSite attribute on a cookie;</span></span>
 
 ```c#
 var cookieOptions = new CookieOptions
@@ -50,9 +52,9 @@ var cookieOptions = new CookieOptions
 Response.Cookies.Append(CookieName, "cookieValue", cookieOptions);
 ```
 
-## <a name="setting-cookie-authentication-and-session-state-cookies"></a><span data-ttu-id="7b0fe-107">Festlegen von Cookieauthentifizierung und Sitzungs Zustands Cookies</span><span class="sxs-lookup"><span data-stu-id="7b0fe-107">Setting Cookie Authentication and Session State cookies</span></span>
+## <a name="setting-cookie-authentication-and-session-state-cookies"></a><span data-ttu-id="6fefa-107">Festlegen von Cookieauthentifizierung und Sitzungs Zustands Cookies</span><span class="sxs-lookup"><span data-stu-id="6fefa-107">Setting Cookie Authentication and Session State cookies</span></span>
 
-<span data-ttu-id="7b0fe-108">Cookie-Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](https://docs.microsoft.com/aspnet/core/security/samesite?view=aspnetcore-3.0) legen ihre SameSite-Optionen über Cookie-Optionen fest, z. b.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-108">Cookie authentication, session state and [various other components](https://docs.microsoft.com/aspnet/core/security/samesite?view=aspnetcore-3.0) set their sameSite options via Cookie options, for example</span></span>
+<span data-ttu-id="6fefa-108">Cookie-Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](https://docs.microsoft.com/aspnet/core/security/samesite?view=aspnetcore-3.0) legen ihre SameSite-Optionen über Cookie-Optionen fest, z. b.</span><span class="sxs-lookup"><span data-stu-id="6fefa-108">Cookie authentication, session state and [various other components](https://docs.microsoft.com/aspnet/core/security/samesite?view=aspnetcore-3.0) set their sameSite options via Cookie options, for example</span></span>
 
 ```c#
 services.AddAuthentication(CookieAuthenticationDefaults.AuthenticationScheme)
@@ -71,21 +73,21 @@ services.AddSession(options =>
 });
 ```
 
-<span data-ttu-id="7b0fe-109">Legen Sie in dem oben gezeigten Code Cookie-Authentifizierung und Sitzungs Status Ihr SameSite-Attribut auf None fest, geben Sie das Attribut mit einem `None` Wert aus, und legen Sie auch das Secure-Attribut auf true fest.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-109">In the code shown above both cookie authentication and session state set their sameSite attribute to None, emitting the attribute with a `None` value, and also set the Secure attribute to true.</span></span>
+<span data-ttu-id="6fefa-109">Legen Sie in dem oben gezeigten Code Cookie-Authentifizierung und Sitzungs Status Ihr SameSite-Attribut auf None fest, geben Sie das Attribut mit einem `None` Wert aus, und legen Sie auch das Secure-Attribut auf true fest.</span><span class="sxs-lookup"><span data-stu-id="6fefa-109">In the code shown above both cookie authentication and session state set their sameSite attribute to None, emitting the attribute with a `None` value, and also set the Secure attribute to true.</span></span>
 
-### <a name="run-the-sample"></a><span data-ttu-id="7b0fe-110">Ausführen des Beispiels</span><span class="sxs-lookup"><span data-stu-id="7b0fe-110">Run the sample</span></span>
+### <a name="run-the-sample"></a><span data-ttu-id="6fefa-110">Ausführen des Beispiels</span><span class="sxs-lookup"><span data-stu-id="6fefa-110">Run the sample</span></span>
 
-<span data-ttu-id="7b0fe-111">Wenn Sie das [Beispiel Projekt](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31RazorPages)ausführen, laden Sie den Browser Debugger auf der Anfangs Seite, und verwenden Sie ihn, um die Cookie-Sammlung für die Website anzuzeigen.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-111">If you run the [sample project](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31RazorPages), load your browser debugger on the initial page and use it to view the cookie collection for the site.</span></span> <span data-ttu-id="7b0fe-112">Wenn Sie dies in Edge und Chrome tun möchten, `F12` Wählen Sie die `Application` Registerkarte aus, und klicken Sie unter der `Cookies` Option im Abschnitt auf die URL der Website `Storage` .</span><span class="sxs-lookup"><span data-stu-id="7b0fe-112">To do so in Edge and Chrome press `F12` then select the `Application` tab and click the site URL under the `Cookies` option in the `Storage` section.</span></span>
+<span data-ttu-id="6fefa-111">Wenn Sie das [Beispiel Projekt](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31RazorPages)ausführen, laden Sie den Browser Debugger auf der Anfangs Seite, und verwenden Sie ihn, um die Cookie-Sammlung für die Website anzuzeigen.</span><span class="sxs-lookup"><span data-stu-id="6fefa-111">If you run the [sample project](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31RazorPages), load your browser debugger on the initial page and use it to view the cookie collection for the site.</span></span> <span data-ttu-id="6fefa-112">Wenn Sie dies in Edge und Chrome tun möchten, `F12` Wählen Sie die `Application` Registerkarte aus, und klicken Sie unter der `Cookies` Option im Abschnitt auf die URL der Website `Storage` .</span><span class="sxs-lookup"><span data-stu-id="6fefa-112">To do so in Edge and Chrome press `F12` then select the `Application` tab and click the site URL under the `Cookies` option in the `Storage` section.</span></span>
 
 ![Liste der Browser Debugger-Cookies](BrowserDebugger.png)
 
-<span data-ttu-id="7b0fe-114">In der obigen Abbildung sehen Sie, dass das Cookie, das durch das Beispiel erstellt wird, wenn Sie auf die Schaltfläche "SameSite Cookie erstellen" klicken, über einen SameSite-Attribut Wert von verfügt, der mit `Lax` dem im [Beispielcode](#sampleCode)festgelegten Wert übereinstimmt.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-114">You can see from the image above that the cookie created by the sample when you click the "Create SameSite Cookie" button has a SameSite attribute value of `Lax`, matching the value set in the [sample code](#sampleCode).</span></span>
+<span data-ttu-id="6fefa-114">In der obigen Abbildung sehen Sie, dass das Cookie, das durch das Beispiel erstellt wird, wenn Sie auf die Schaltfläche "SameSite Cookie erstellen" klicken, über einen SameSite-Attribut Wert von verfügt, der mit `Lax` dem im [Beispielcode](#sampleCode)festgelegten Wert übereinstimmt.</span><span class="sxs-lookup"><span data-stu-id="6fefa-114">You can see from the image above that the cookie created by the sample when you click the "Create SameSite Cookie" button has a SameSite attribute value of `Lax`, matching the value set in the [sample code](#sampleCode).</span></span>
 
-## <a name="intercepting-cookies"></a><a name="interception"></a><span data-ttu-id="7b0fe-115">Abfangen von Cookies</span><span class="sxs-lookup"><span data-stu-id="7b0fe-115">Intercepting cookies</span></span>
+## <a name="intercepting-cookies"></a><a name="interception"></a><span data-ttu-id="6fefa-115">Abfangen von Cookies</span><span class="sxs-lookup"><span data-stu-id="6fefa-115">Intercepting cookies</span></span>
 
-<span data-ttu-id="7b0fe-116">Zum Abfangen von Cookies müssen Sie die Middleware verwenden, um den Wert None gemäß der Unterstützung im Browser-Agent des Benutzers anzupassen `CookiePolicy` .</span><span class="sxs-lookup"><span data-stu-id="7b0fe-116">In order to intercept cookies, to adjust the none value according to its support in the user's browser agent you must use the `CookiePolicy` middleware.</span></span> <span data-ttu-id="7b0fe-117">Dies muss **vor** allen Komponenten, die Cookies schreiben und innerhalb von konfiguriert werden, in der HTTP-Anforderungs Pipeline abgelegt werden `ConfigureServices()` .</span><span class="sxs-lookup"><span data-stu-id="7b0fe-117">This must be placed into the http request pipeline **before** any components that write cookies and configured within `ConfigureServices()`.</span></span>
+<span data-ttu-id="6fefa-116">Zum Abfangen von Cookies müssen Sie die Middleware verwenden, um den Wert None gemäß der Unterstützung im Browser-Agent des Benutzers anzupassen `CookiePolicy` .</span><span class="sxs-lookup"><span data-stu-id="6fefa-116">In order to intercept cookies, to adjust the none value according to its support in the user's browser agent you must use the `CookiePolicy` middleware.</span></span> <span data-ttu-id="6fefa-117">Dies muss **vor** allen Komponenten, die Cookies schreiben und innerhalb von konfiguriert werden, in der HTTP-Anforderungs Pipeline abgelegt werden `ConfigureServices()` .</span><span class="sxs-lookup"><span data-stu-id="6fefa-117">This must be placed into the http request pipeline **before** any components that write cookies and configured within `ConfigureServices()`.</span></span>
 
-<span data-ttu-id="7b0fe-118">Um Sie in die Pipeline einzufügen, verwenden Sie `app.UseCookiePolicy()` in der- `Configure(IApplicationBuilder, IHostingEnvironment)` Methode in Ihrer [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span><span class="sxs-lookup"><span data-stu-id="7b0fe-118">To insert it into the pipeline use `app.UseCookiePolicy()` in the `Configure(IApplicationBuilder, IHostingEnvironment)` method in your [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span></span> <span data-ttu-id="7b0fe-119">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="7b0fe-119">For example</span></span>
+<span data-ttu-id="6fefa-118">Um Sie in die Pipeline einzufügen, verwenden Sie `app.UseCookiePolicy()` in der- `Configure(IApplicationBuilder, IHostingEnvironment)` Methode in Ihrer [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span><span class="sxs-lookup"><span data-stu-id="6fefa-118">To insert it into the pipeline use `app.UseCookiePolicy()` in the `Configure(IApplicationBuilder, IHostingEnvironment)` method in your [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span></span> <span data-ttu-id="6fefa-119">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="6fefa-119">For example</span></span>
 
 ```c#
 public void Configure(IApplicationBuilder app, IHostingEnvironment env)
@@ -115,7 +117,7 @@ public void Configure(IApplicationBuilder app, IHostingEnvironment env)
 }
 ```
 
-<span data-ttu-id="7b0fe-120">Anschließend können Sie in der `ConfigureServices(IServiceCollection services)` cookierichtlinie konfigurieren, um eine Hilfsklasse aufzurufen, wenn Cookies angehängt oder gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-120">Then in the `ConfigureServices(IServiceCollection services)` configure the cookie policy to call out to a helper class when cookies are appended or deleted, like so;</span></span>
+<span data-ttu-id="6fefa-120">Anschließend können Sie in der `ConfigureServices(IServiceCollection services)` cookierichtlinie konfigurieren, um eine Hilfsklasse aufzurufen, wenn Cookies angehängt oder gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="6fefa-120">Then in the `ConfigureServices(IServiceCollection services)` configure the cookie policy to call out to a helper class when cookies are appended or deleted, like so;</span></span>
 
 ```c#
 public void ConfigureServices(IServiceCollection services)
@@ -144,15 +146,15 @@ private void CheckSameSite(HttpContext httpContext, CookieOptions options)
 }
 ```
 
-<span data-ttu-id="7b0fe-121">Die Hilfsfunktion `CheckSameSite(HttpContext, CookieOptions)` :</span><span class="sxs-lookup"><span data-stu-id="7b0fe-121">The helper function `CheckSameSite(HttpContext, CookieOptions)`:</span></span>
+<span data-ttu-id="6fefa-121">Die Hilfsfunktion `CheckSameSite(HttpContext, CookieOptions)` :</span><span class="sxs-lookup"><span data-stu-id="6fefa-121">The helper function `CheckSameSite(HttpContext, CookieOptions)`:</span></span>
 
-* <span data-ttu-id="7b0fe-122">Wird aufgerufen, wenn Cookies an die Anforderung angefügt oder aus der Anforderung gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-122">Is called when cookies are appended to the request or deleted from the request.</span></span>
-* <span data-ttu-id="7b0fe-123">Prüft, ob die- `SameSite` Eigenschaft auf festgelegt ist `None` .</span><span class="sxs-lookup"><span data-stu-id="7b0fe-123">Checks to see if the `SameSite` property is set to `None`.</span></span>
-* <span data-ttu-id="7b0fe-124">Wenn `SameSite` auf festgelegt ist `None` und der aktuelle Benutzer-Agent bekanntermaßen den None-Attribut Wert nicht unterstützt.</span><span class="sxs-lookup"><span data-stu-id="7b0fe-124">If `SameSite` is set to `None` and the current user agent is known to not support the none attribute value.</span></span> <span data-ttu-id="7b0fe-125">Die Überprüfung erfolgt mithilfe der [samesitesupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) -Klasse:</span><span class="sxs-lookup"><span data-stu-id="7b0fe-125">The check is done using the [SameSiteSupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) class:</span></span>
-  * <span data-ttu-id="7b0fe-126">Legt `SameSite` fest, dass der Wert nicht durch Festlegen der-Eigenschaft auf ausgegeben wird.`(SameSiteMode)(-1)`</span><span class="sxs-lookup"><span data-stu-id="7b0fe-126">Sets `SameSite` to not emit the value by setting the property to `(SameSiteMode)(-1)`</span></span>
+* <span data-ttu-id="6fefa-122">Wird aufgerufen, wenn Cookies an die Anforderung angefügt oder aus der Anforderung gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="6fefa-122">Is called when cookies are appended to the request or deleted from the request.</span></span>
+* <span data-ttu-id="6fefa-123">Prüft, ob die- `SameSite` Eigenschaft auf festgelegt ist `None` .</span><span class="sxs-lookup"><span data-stu-id="6fefa-123">Checks to see if the `SameSite` property is set to `None`.</span></span>
+* <span data-ttu-id="6fefa-124">Wenn `SameSite` auf festgelegt ist `None` und der aktuelle Benutzer-Agent bekanntermaßen den None-Attribut Wert nicht unterstützt.</span><span class="sxs-lookup"><span data-stu-id="6fefa-124">If `SameSite` is set to `None` and the current user agent is known to not support the none attribute value.</span></span> <span data-ttu-id="6fefa-125">Die Überprüfung erfolgt mithilfe der [samesitesupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) -Klasse:</span><span class="sxs-lookup"><span data-stu-id="6fefa-125">The check is done using the [SameSiteSupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) class:</span></span>
+  * <span data-ttu-id="6fefa-126">Legt `SameSite` fest, dass der Wert nicht durch Festlegen der-Eigenschaft auf ausgegeben wird.`(SameSiteMode)(-1)`</span><span class="sxs-lookup"><span data-stu-id="6fefa-126">Sets `SameSite` to not emit the value by setting the property to `(SameSiteMode)(-1)`</span></span>
 
-### <a name="more-information"></a><span data-ttu-id="7b0fe-127">Weitere Informationen</span><span class="sxs-lookup"><span data-stu-id="7b0fe-127">More Information</span></span>
+### <a name="more-information"></a><span data-ttu-id="6fefa-127">Weitere Informationen</span><span class="sxs-lookup"><span data-stu-id="6fefa-127">More Information</span></span>
  
-<span data-ttu-id="7b0fe-128">[Chrome-Updates](https://www.chromium.org/updates/same-site) 
- [Dokumentation zu ASP.net Core SameSite](xref:security/samesite)</span><span class="sxs-lookup"><span data-stu-id="7b0fe-128">[Chrome Updates](https://www.chromium.org/updates/same-site)
+<span data-ttu-id="6fefa-128">[Chrome-Updates](https://www.chromium.org/updates/same-site) 
+ [Dokumentation zu ASP.net Core SameSite](xref:security/samesite)</span><span class="sxs-lookup"><span data-stu-id="6fefa-128">[Chrome Updates](https://www.chromium.org/updates/same-site)
 [ASP.NET Core SameSite Documentation](xref:security/samesite)</span></span>
