--- a/aspnetcore/migration/30-to-31.md
+++ b/aspnetcore/migration/30-to-31.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,0-Projekt zu ASP.net Core 3,1 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 02/12/2020
+ms.date: 07/02/2020
 no-loc:
 - Blazor
 - Blazor Server
@@ -14,38 +14,38 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/30-to-31
-ms.openlocfilehash: fa82138af46d11e47c22314feccc43043b636066
-ms.sourcegitcommit: d65a027e78bf0b83727f975235a18863e685d902
+ms.openlocfilehash: bf46b7deb45115a4f45b34be4e16e72308b34ac2
+ms.sourcegitcommit: 66fca14611eba141d455fe0bd2c37803062e439c
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 06/26/2020
-ms.locfileid: "85399919"
+ms.lasthandoff: 07/03/2020
+ms.locfileid: "85944606"
 ---
-# <a name="migrate-from-aspnet-core-30-to-31"></a><span data-ttu-id="c4d07-103">Migrieren von ASP.net Core 3,0 zu 3,1</span><span class="sxs-lookup"><span data-stu-id="c4d07-103">Migrate from ASP.NET Core 3.0 to 3.1</span></span>
+# <a name="migrate-from-aspnet-core-30-to-31"></a><span data-ttu-id="a4f46-103">Migrieren von ASP.net Core 3,0 zu 3,1</span><span class="sxs-lookup"><span data-stu-id="a4f46-103">Migrate from ASP.NET Core 3.0 to 3.1</span></span>
 
-<span data-ttu-id="c4d07-104">Von [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="c4d07-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="a4f46-104">Von [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="a4f46-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="c4d07-105">In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,0-Projekt auf ASP.net Core 3,1 aktualisiert wird.</span><span class="sxs-lookup"><span data-stu-id="c4d07-105">This article explains how to update an existing ASP.NET Core 3.0 project to ASP.NET Core 3.1.</span></span>
+<span data-ttu-id="a4f46-105">In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,0-Projekt auf ASP.net Core 3,1 aktualisiert wird.</span><span class="sxs-lookup"><span data-stu-id="a4f46-105">This article explains how to update an existing ASP.NET Core 3.0 project to ASP.NET Core 3.1.</span></span>
 
-## <a name="prerequisites"></a><span data-ttu-id="c4d07-106">Voraussetzungen</span><span class="sxs-lookup"><span data-stu-id="c4d07-106">Prerequisites</span></span>
+## <a name="prerequisites"></a><span data-ttu-id="a4f46-106">Voraussetzungen</span><span class="sxs-lookup"><span data-stu-id="a4f46-106">Prerequisites</span></span>
 
-# <a name="visual-studio"></a>[<span data-ttu-id="c4d07-107">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="c4d07-107">Visual Studio</span></span>](#tab/visual-studio)
+# <a name="visual-studio"></a>[<span data-ttu-id="a4f46-107">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="a4f46-107">Visual Studio</span></span>](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-3.1.md)]
 
-# <a name="visual-studio-code"></a>[<span data-ttu-id="c4d07-108">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="c4d07-108">Visual Studio Code</span></span>](#tab/visual-studio-code)
+# <a name="visual-studio-code"></a>[<span data-ttu-id="a4f46-108">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="a4f46-108">Visual Studio Code</span></span>](#tab/visual-studio-code)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vsc-3.1.md)]
 
-# <a name="visual-studio-for-mac"></a>[<span data-ttu-id="c4d07-109">Visual Studio für Mac</span><span class="sxs-lookup"><span data-stu-id="c4d07-109">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
+# <a name="visual-studio-for-mac"></a>[<span data-ttu-id="a4f46-109">Visual Studio für Mac</span><span class="sxs-lookup"><span data-stu-id="a4f46-109">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
 
 [!INCLUDE[](~/includes/net-core-prereqs-mac-3.1.md)]
 
 ---
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="c4d07-110">Aktualisieren der .NET Core SDK-Version in „global.json“</span><span class="sxs-lookup"><span data-stu-id="c4d07-110">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="a4f46-110">Aktualisieren der .NET Core SDK-Version in „global.json“</span><span class="sxs-lookup"><span data-stu-id="a4f46-110">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="c4d07-111">Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK.</span><span class="sxs-lookup"><span data-stu-id="c4d07-111">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the 3.1 SDK version that's installed.</span></span> <span data-ttu-id="c4d07-112">Zum Beispiel:</span><span class="sxs-lookup"><span data-stu-id="c4d07-112">For example:</span></span>
+<span data-ttu-id="a4f46-111">Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK.</span><span class="sxs-lookup"><span data-stu-id="a4f46-111">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the 3.1 SDK version that's installed.</span></span> <span data-ttu-id="a4f46-112">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="a4f46-112">For example:</span></span>
 
 ```diff
 {
@@ -56,9 +56,9 @@ ms.locfileid: "85399919"
 }
 ```
 
-## <a name="update-the-target-framework"></a><span data-ttu-id="c4d07-113">Aktualisieren des Ziel Frameworks</span><span class="sxs-lookup"><span data-stu-id="c4d07-113">Update the target framework</span></span>
+## <a name="update-the-target-framework"></a><span data-ttu-id="a4f46-113">Aktualisieren des Ziel Frameworks</span><span class="sxs-lookup"><span data-stu-id="a4f46-113">Update the target framework</span></span>
 
-<span data-ttu-id="c4d07-114">Aktualisieren Sie in der Projektdatei den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) auf `netcoreapp3.1` :</span><span class="sxs-lookup"><span data-stu-id="c4d07-114">In the project file, update the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `netcoreapp3.1`:</span></span>
+<span data-ttu-id="a4f46-114">Aktualisieren Sie in der Projektdatei den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) auf `netcoreapp3.1` :</span><span class="sxs-lookup"><span data-stu-id="a4f46-114">In the project file, update the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `netcoreapp3.1`:</span></span>
 
 ```diff
 <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -71,9 +71,9 @@ ms.locfileid: "85399919"
 </Project>
 ```
 
-## <a name="update-package-references"></a><span data-ttu-id="c4d07-115">Aktualisieren von Paketverweisen</span><span class="sxs-lookup"><span data-stu-id="c4d07-115">Update package references</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="a4f46-115">Aktualisieren von Paketverweisen</span><span class="sxs-lookup"><span data-stu-id="a4f46-115">Update package references</span></span>
 
-<span data-ttu-id="c4d07-116">Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher.</span><span class="sxs-lookup"><span data-stu-id="c4d07-116">In the project file, update each `Microsoft.AspNetCore.*` package reference's `Version` attribute to 3.1.0 or later.</span></span> <span data-ttu-id="c4d07-117">Zum Beispiel:</span><span class="sxs-lookup"><span data-stu-id="c4d07-117">For example:</span></span>
+<span data-ttu-id="a4f46-116">Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher.</span><span class="sxs-lookup"><span data-stu-id="a4f46-116">In the project file, update each `Microsoft.AspNetCore.*` package reference's `Version` attribute to 3.1.0 or later.</span></span> <span data-ttu-id="a4f46-117">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="a4f46-117">For example:</span></span>
 
 ```diff
 <ItemGroup>
@@ -84,37 +84,37 @@ ms.locfileid: "85399919"
 </ItemGroup>
 ```
 
-## <a name="update-docker-images"></a><span data-ttu-id="c4d07-118">Aktualisieren von Docker-Images</span><span class="sxs-lookup"><span data-stu-id="c4d07-118">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="a4f46-118">Aktualisieren von Docker-Images</span><span class="sxs-lookup"><span data-stu-id="a4f46-118">Update Docker images</span></span>
 
-<span data-ttu-id="c4d07-119">Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält.</span><span class="sxs-lookup"><span data-stu-id="c4d07-119">For apps using Docker, use a base image that includes ASP.NET Core 3.1.</span></span> <span data-ttu-id="c4d07-120">Zum Beispiel:</span><span class="sxs-lookup"><span data-stu-id="c4d07-120">For example:</span></span>
+<span data-ttu-id="a4f46-119">Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält.</span><span class="sxs-lookup"><span data-stu-id="a4f46-119">For apps using Docker, use a base image that includes ASP.NET Core 3.1.</span></span> <span data-ttu-id="a4f46-120">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="a4f46-120">For example:</span></span>
 
 ```console
 docker pull mcr.microsoft.com/dotnet/core/aspnet:3.1
 ```
 
-## <a name="react-to-samesite-cookie-changes"></a><span data-ttu-id="c4d07-121">Auf SameSite-Cookie-Änderungen reagieren</span><span class="sxs-lookup"><span data-stu-id="c4d07-121">React to SameSite cookie changes</span></span>
+## <a name="react-to-samesite-cookie-changes"></a><span data-ttu-id="a4f46-121">Auf SameSite-Cookie-Änderungen reagieren</span><span class="sxs-lookup"><span data-stu-id="a4f46-121">React to SameSite cookie changes</span></span>
 
-<span data-ttu-id="c4d07-122">Die `SameSite` Attribut Implementierungen für HTTP-Cookies wurden zwischen ASP.net Core 3,0 und 3,1 geändert.</span><span class="sxs-lookup"><span data-stu-id="c4d07-122">The `SameSite` attribute implementations for HTTP cookies changed between ASP.NET Core 3.0 and 3.1.</span></span> <span data-ttu-id="c4d07-123">Informationen zu den zu ergreifenden Aktionen finden Sie in den folgenden Ressourcen:</span><span class="sxs-lookup"><span data-stu-id="c4d07-123">For actions to be taken, see the following resources:</span></span>
+<span data-ttu-id="a4f46-122">Die `SameSite` Attribut Implementierungen für HTTP-Cookies wurden zwischen ASP.net Core 3,0 und 3,1 geändert.</span><span class="sxs-lookup"><span data-stu-id="a4f46-122">The `SameSite` attribute implementations for HTTP cookies changed between ASP.NET Core 3.0 and 3.1.</span></span> <span data-ttu-id="a4f46-123">Informationen zu den zu ergreifenden Aktionen finden Sie in den folgenden Ressourcen:</span><span class="sxs-lookup"><span data-stu-id="a4f46-123">For actions to be taken, see the following resources:</span></span>
 
 * <xref:security/samesite>
-* [<span data-ttu-id="c4d07-124">ASPNET/Ankündigungen # 390</span><span class="sxs-lookup"><span data-stu-id="c4d07-124">aspnet/Announcements#390</span></span>](https://github.com/aspnet/Announcements/issues/390)
-* [<span data-ttu-id="c4d07-125">Anstehende SameSite-Cookie-Änderungen in ASP.net und ASP.net Core</span><span class="sxs-lookup"><span data-stu-id="c4d07-125">Upcoming SameSite cookie changes in ASP.NET and ASP.NET Core</span></span>](https://devblogs.microsoft.com/aspnet/upcoming-samesite-cookie-changes-in-asp-net-and-asp-net-core/)
+* [<span data-ttu-id="a4f46-124">ASPNET/Ankündigungen # 390</span><span class="sxs-lookup"><span data-stu-id="a4f46-124">aspnet/Announcements#390</span></span>](https://github.com/aspnet/Announcements/issues/390)
+* [<span data-ttu-id="a4f46-125">Anstehende SameSite-Cookie-Änderungen in ASP.net und ASP.net Core</span><span class="sxs-lookup"><span data-stu-id="a4f46-125">Upcoming SameSite cookie changes in ASP.NET and ASP.NET Core</span></span>](https://devblogs.microsoft.com/aspnet/upcoming-samesite-cookie-changes-in-asp-net-and-asp-net-core/)
 
-## <a name="review-breaking-changes"></a><span data-ttu-id="c4d07-126">Wichtige Änderungen überprüfen</span><span class="sxs-lookup"><span data-stu-id="c4d07-126">Review breaking changes</span></span>
+## <a name="review-breaking-changes"></a><span data-ttu-id="a4f46-126">Wichtige Änderungen überprüfen</span><span class="sxs-lookup"><span data-stu-id="a4f46-126">Review breaking changes</span></span>
 
-<span data-ttu-id="c4d07-127">Überprüfen Sie 3,0-zu-3,1-wichtige Änderungen für .net Core, ASP.net Core und Entity Framework Core Untergrund Legende [Änderungen für die Migration von Version 3,0 zu 3,1](/dotnet/core/compatibility/3.0-3.1).</span><span class="sxs-lookup"><span data-stu-id="c4d07-127">Review 3.0-to-3.1 breaking changes across .NET Core, ASP.NET Core, and Entity Framework Core at [Breaking changes for migration from version 3.0 to 3.1](/dotnet/core/compatibility/3.0-3.1).</span></span>
+<span data-ttu-id="a4f46-127">Überprüfen Sie 3,0-zu-3,1-wichtige Änderungen für .net Core, ASP.net Core und Entity Framework Core Untergrund Legende [Änderungen für die Migration von Version 3,0 zu 3,1](/dotnet/core/compatibility/3.0-3.1).</span><span class="sxs-lookup"><span data-stu-id="a4f46-127">Review 3.0-to-3.1 breaking changes across .NET Core, ASP.NET Core, and Entity Framework Core at [Breaking changes for migration from version 3.0 to 3.1](/dotnet/core/compatibility/3.0-3.1).</span></span>
 
-## <a name="optional-changes"></a><span data-ttu-id="c4d07-128">Optionale Änderungen</span><span class="sxs-lookup"><span data-stu-id="c4d07-128">Optional changes</span></span>
+## <a name="optional-changes"></a><span data-ttu-id="a4f46-128">Optionale Änderungen</span><span class="sxs-lookup"><span data-stu-id="a4f46-128">Optional changes</span></span>
 
-<span data-ttu-id="c4d07-129">Die folgenden Änderungen sind optional.</span><span class="sxs-lookup"><span data-stu-id="c4d07-129">The following changes are optional.</span></span>
+<span data-ttu-id="a4f46-129">Die folgenden Änderungen sind optional.</span><span class="sxs-lookup"><span data-stu-id="a4f46-129">The following changes are optional.</span></span>
 
-### <a name="use-the-component-tag-helper"></a><span data-ttu-id="c4d07-130">Verwenden des komponententaghilfsprogramms</span><span class="sxs-lookup"><span data-stu-id="c4d07-130">Use the Component Tag Helper</span></span>
+### <a name="use-the-component-tag-helper"></a><span data-ttu-id="a4f46-130">Verwenden des komponententaghilfsprogramms</span><span class="sxs-lookup"><span data-stu-id="a4f46-130">Use the Component Tag Helper</span></span>
 
-<span data-ttu-id="c4d07-131">In ASP.net Core 3,1 wird ein `Component` taghilfsprogramm eingeführt.</span><span class="sxs-lookup"><span data-stu-id="c4d07-131">ASP.NET Core 3.1 introduces a `Component` Tag Helper.</span></span> <span data-ttu-id="c4d07-132">Das taghilfsprogramm kann die `RenderComponentAsync<TComponent>` HTML-Hilfsmethode in einem Blazor Projekt ersetzen.</span><span class="sxs-lookup"><span data-stu-id="c4d07-132">The Tag Helper can replace the `RenderComponentAsync<TComponent>` HTML helper method in a Blazor project.</span></span> <span data-ttu-id="c4d07-133">Zum Beispiel:</span><span class="sxs-lookup"><span data-stu-id="c4d07-133">For example:</span></span>
+<span data-ttu-id="a4f46-131">In ASP.net Core 3,1 wird ein `Component` taghilfsprogramm eingeführt.</span><span class="sxs-lookup"><span data-stu-id="a4f46-131">ASP.NET Core 3.1 introduces a `Component` Tag Helper.</span></span> <span data-ttu-id="a4f46-132">Das taghilfsprogramm kann die `RenderComponentAsync<TComponent>` HTML-Hilfsmethode in einem Blazor Projekt ersetzen.</span><span class="sxs-lookup"><span data-stu-id="a4f46-132">The Tag Helper can replace the `RenderComponentAsync<TComponent>` HTML helper method in a Blazor project.</span></span> <span data-ttu-id="a4f46-133">Zum Beispiel:</span><span class="sxs-lookup"><span data-stu-id="a4f46-133">For example:</span></span>
 
 ```diff
 - @(await Html.RenderComponentAsync<Counter>(RenderMode.ServerPrerendered, new { IncrementAmount = 10 }))
 + <component type="typeof(Counter)" render-mode="ServerPrerendered" param-IncrementAmount="10" />
 ```
 
-<span data-ttu-id="c4d07-134">Weitere Informationen finden Sie unter [Integrieren von Komponenten in Razor-Seiten und MVC-Apps](/aspnet/core/blazor/components/integrate-components-into-razor-pages-and-mvc-apps?view=aspnetcore-3.1).</span><span class="sxs-lookup"><span data-stu-id="c4d07-134">For more information, see [Integrate components into Razor Pages and MVC apps](/aspnet/core/blazor/components/integrate-components-into-razor-pages-and-mvc-apps?view=aspnetcore-3.1).</span></span>
+<span data-ttu-id="a4f46-134">Weitere Informationen finden Sie unter <xref:blazor/components/integrate-components-into-razor-pages-and-mvc-apps>.</span><span class="sxs-lookup"><span data-stu-id="a4f46-134">For more information, see <xref:blazor/components/integrate-components-into-razor-pages-and-mvc-apps>.</span></span>
