--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 06/11/2020
+ms.date: 07/22/2020
 no-loc:
 - Blazor
 - Blazor Server
@@ -14,12 +14,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 51983ce1bec7c3a774da8e8ccd3a3a4c9aca07ea
-ms.sourcegitcommit: d65a027e78bf0b83727f975235a18863e685d902
+ms.openlocfilehash: a9c3806c120fed33bf849e0a40d5f8b51263952d
+ms.sourcegitcommit: c86b4e2955dc1724f2eaa7c97894ad8b3bf763fb
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 06/26/2020
-ms.locfileid: "85399880"
+ms.lasthandoff: 07/22/2020
+ms.locfileid: "86949107"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -48,20 +48,20 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Zum Beispiel:
+Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Beispiel:
 
 ```diff
 {
   "sdk": {
 -    "version": "3.1.200"
-+    "version": "5.0.100-preview.6.20318.15"
++    "version": "5.0.100-preview.7.20366.6"
   }
 }
 ```
 
 ## <a name="update-the-target-framework"></a>Aktualisieren des Ziel Frameworks
 
-Aktualisieren Sie in der Projektdatei den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) auf `net5.0` :
+Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschnitt [ Blazor WebAssembly Projekte aktualisieren](#update-blazor-webassembly-projects) fort. Für alle anderen ASP.net Core Projekttyp aktualisieren Sie den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) der Projektdatei auf Folgendes `net5.0` :
 
 ```diff
 <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -74,16 +74,43 @@ Aktualisieren Sie in der Projektdatei den [zielframeworkmoniker (TFM)](/dotnet/s
 </Project>
 ```
 
+## <a name="update-blazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
+
+Wenden Sie für- Blazor WebAssembly Projekte die folgenden Änderungen in der Projektdatei an:
+
+1. Aktualisieren Sie die folgenden Eigenschaften:
+
+    ```diff
+    <Project Sdk="Microsoft.NET.Sdk.Web">
+    
+      <PropertyGroup>
+    -     <TargetFramework>netstandard2.1</TargetFramework>
+    -     <RazorLangVersion>3.0</RazorLangVersion>
+    +     <TargetFramework>net5.0</TargetFramework>
+    +     <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
+    +     <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
+      </PropertyGroup>
+    ```
+
+1. Entfernen Sie den Paket Verweis auf [Microsoft. aspnetcore. Components. Webassembly. Build](https://www.nuget.org/packages/Microsoft.AspNetCore.Components.WebAssembly.Build):
+
+    ```diff
+    <ItemGroup>
+    -    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
+    ```
+
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` einzelnen `Microsoft.Extensions.*` Attribute und das Attribut des Paket Verweises `Version` auf 5.0.0 oder höher. Zum Beispiel:
+Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Beispiel:
 
 ```diff
 <ItemGroup>
--    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
--    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.2" />
-+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0-preview.6.20312.15" />
-+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.6.20305.6" />
+-    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.6" />
+-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.6" />
+-    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
++    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0-preview.7.20365.19" />
++    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.7.20364.11" />
++    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.7.20364.11" />
 </ItemGroup>
 ```
 
